# c99-3d-math

./: 3dmath.h  CMakeLists.txt  c99-3d-math.pro  c99-3d-math.sln  mathlib.h  matrix.c  quaternion.c  queries.c  transforms.c  utils.c
3dmath/: 3dmath.pro  3dmath.vcxproj  3dmath.vcxproj.filters  mathlib.h  matrix.c  quaternion.c  queries.c  transforms.c
